# pydistcheck

./: .cmake-format.yaml  .gitignore  .lycheeignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yaml  CONTRIBUTING.md  EXAMPLES.md  LICENSE  MANIFEST.in  Makefile  README.md  VERSION.txt  constraints.txt  pyproject.toml  requirements-check-dists.txt  requirements-tests.txt  requirements.txt  setup.cfg
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  new-check.yml
.github/workflows/: build-and-publish-wheels.yml  check-docs.yml  check-labels.yml  label-checker.yml  main.yml  manual-run.yml  release-drafter.yml  smoke-tests.yml  static-analysis.yml  unit-tests.yml
docs/: README.md  check-reference.rst  conf.py  configuration.rst  env.yml  how-to-test-a-distribution.rst  how-to-test-a-python-distribution.rst  index.rst  installation.rst
docs/_static/: defaults.toml
src/py_artifact_linter/: __init__.py  _compat.py  cli.py  distribution_summary.py
src/pydistcheck/: __init__.py  _checks.py  _compat.py  _config.py  _distribution_summary.py  _file_utils.py  _inspect.py  _shared_lib_utils.py  _utils.py  _vendored_delocate.py  checks.py  cli.py  config.py  distribution_summary.py  file_utils.py  inspect.py  shared_lib_utils.py  utils.py
tests/: test_checks.py  test_cli.py  test_compat.py  test_config.py  test_distribution_summary.py  test_docs.py  test_shared_lib_utils.py  test_utils.py
tests/data/: baseballmetrics-0.1.0-0.tar.bz2  baseballmetrics-0.1.0-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_28_x86_64.whl  baseballmetrics-0.1.0-py3-none-macosx_10_15_x86_64.macosx_11_6_x86_64.macosx_12_5_x86_64.whl  baseballmetrics-0.1.0-py3-none-macosx_12_0_arm64.whl  baseballmetrics-0.1.0-py3-none-macosx_12_0_x86_64.whl  baseballmetrics-0.1.0-py3-none-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  baseballmetrics-0.1.0-py3-none-manylinux_2_28_x86_64.manylinux_2_5_x86_64.manylinux1_x86_64.whl  debug-baseballmetrics-0.1.0-0.tar.bz2  debug-baseballmetrics-0.1.0-macosx-wheel.tar.bz2  debug-baseballmetrics-0.1.0-py3-none-macosx_10_15_x86_64.macosx_11_6_x86_64.macosx_12_5_x86_64.whl  debug-baseballmetrics-0.1.0-py3-none-macosx_12_0_arm64.whl  debug-baseballmetrics-0.1.0-py3-none-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  debug-baseballmetrics-py3-none-manylinux_2_28_x86_64.manylinux_2_5_x86_64.manylinux1_x86_64.whl  lightgbm-3.3.5-py3-none-win_amd64.whl  osx-64-baseballmetrics-0.1.0-0.conda  osx-64-baseballmetrics-0.1.0-0.tar.bz2  osx-64-debug-baseballmetrics-0.1.0-0.conda  osx-64-debug-baseballmetrics-0.1.0-0.tar.bz2  osx-arm64-baseballmetrics-0.1.0-0.conda  osx-arm64-baseballmetrics-0.1.0-0.tar.bz2  osx-arm64-debug-baseballmetrics-0.1.0-0.conda  osx-arm64-debug-baseballmetrics-0.1.0-0.tar.bz2
tests/data/baseballmetrics/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg  setup.py  test.py
tests/data/baseballmetrics/baseballmetrics/: _lib.py  _shared_lib.py  metrics.py
tests/data/baseballmetrics/include/baseballmetrics/: c_api.h
tests/data/baseballmetrics/src/: c_api.cpp
tests/data/conda-recipes/: install-baseballmetrics.sh  install-debug-baseballmetrics.sh  meta.yaml
tests/data/conda-recipes/baseballmetrics/: meta.yaml
tests/data/conda-recipes/debug-baseballmetrics/: meta.yaml
