[metadata]
name = pydistcheck
version = file: VERSION.txt
description = Inspect Python package distributions and raise warnings on common problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jameslamb/pydistcheck
author = James Lamb
author_email = jaylamb20@gmail.com
maintainer = James Lamb
maintainer_email = jaylamb20@gmail.com
license = BSD-3-Clause
license_files =
    LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Utilities
download_url = https://github.com/jameslamb/pydistcheck

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
# ensure that ony files in src/ get included
package_dir =
    =src

[options.entry_points]
console_scripts =
    pydistcheck = pydistcheck.cli:check
    pydistcheck-summarize = pydistcheck.cli:summarize

[options.extras_require]
tests = file: requirements-tests.txt

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
