[project]

authors = [
  {name = "James Lamb", email = "jaylamb20@gmail.com"}
]
classifiers = [
    "Operating System :: Unix",
    "Programming Language :: Python :: 3"
]
description = "test C++ package for pydistcheck"
maintainers = [
  {name = "James Lamb", email = "jaylamb20@gmail.com"}
]
name = "baseballmetrics"
version = "0.1.0"

[project.urls]
repository = "https://github.com/jameslamb/pydistcheck"

[build-system]

requires = ["scikit-build-core>=0.8.0"]
build-backend = "scikit_build_core.build"

# based on https://github.com/scikit-build/scikit-build-core#configuration
[tool.scikit-build]

cmake.version = ">=3.21"
ninja.version = ">=1.5"
ninja.make-fallback = true
cmake.args = []
cmake.verbose = true
cmake.build-type = "Release"
logging.level = "INFO"
sdist.reproducible = true
wheel.py-api = "py3"
experimental = true
strict-config = true
minimum-version = "0.8.0"
