[metadata]
classifiers =
    Operating System :: Unix
    Programming Language :: Python :: 3
description = test C++ package for pydistcheck
maintainer = James Lamb
maintainer_email = jaylamb20@gmail.com
name = baseballmetrics
url = https://github.com/jameslamb/pydistcheck
version = 0.1.0

[options]
python_requires = >=3.8
